--- a/style.css
+++ b/style.css
@@ -14,8 +14,11 @@ body {
     margin: 100px auto 0;
     position: relative;
     width: 700px;
+
     @media (max-width: 480px) {
-        width: 300px;}
+        width: 300px;
+        height: 200px;
+    }
 }
 
 .slider {
@@ -40,36 +43,38 @@ body {
 .slide1 {
     background-image: url(https://avatars.mds.yandex.net/i?id=dc51bb5328ee31c5df6d9f5e505e1dc5b658615c-10576924-images-thumbs&n=13);
     background-repeat: no-repeat;
-    background-size:  cover;
-    width: 100%;
+    background-size: cover;
+
+ 
+
 }
 
 .slide2 {
     background-image: url(https://avatars.mds.yandex.net/i?id=a7fa863776a4b9794a1c723dcebca531-5754043-images-thumbs&n=13);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    
+   
+
 }
 
 .slide3 {
     background-image: url(https://avatars.mds.yandex.net/i?id=683c18de86bb6e815d23a268a9e830c1f47d2093-9720926-images-thumbs&n=13);
     background-repeat: no-repeat;
-    object-fit: cover;
+
     background-size: cover;
 }
 
 .slide4 {
     background-image: url(https://avatars.mds.yandex.net/i?id=45fcd5f6f1c6581e95397da94fcca99799e112db-10284885-images-thumbs&n=13);
     background-repeat: no-repeat;
-    object-fit: cover;
+   
     background-size: cover;
 }
 
 .slide5 {
     background-image: url(hhttps://avatars.mds.yandex.net/i?id=e058035e4360e203b9f524e719889fc5f049650d-10331033-images-thumbs&n=13);
     background-repeat: no-repeat;
-    object-fit: cover;
+   
     background-size: cover;
 }
 
@@ -94,8 +99,10 @@ body {
     left: 50%;
     margin-left: 150px;
     position: absolute;
+
     @media (max-width: 480px) {
-        margin-left: -90px;}
+        margin-left: -90px;
+    }
 
 }
 
@@ -141,4 +148,7 @@ body {
     color: #b07c7c;
     margin-top: 300px;
     z-index: 90;
+    @media (max-width: 480px) {
+        margin-top: 150px;
+    }
 }
